--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -29,12 +29,17 @@
 
 [alias]
   a = add
+  aa = add --all
   c = commit
   cm = commit -m
   co = checkout
   df = diff --word-diff
   f = fetch
   rb = rebase
+  rba = rebase --abort
+  rbc = rebase --continue
+  rbi = rebase --interactive
+  rbs = rebase --skip
   rbm = rebase origin/master
   s = status
   p = push
