--- a/git/.gitignore
+++ b/git/.gitignore
@@ -1,6 +1,22 @@
-*~
-._*
+# Folder view configuration files
 .DS_Store
-.idea
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
+*.pyc
+
+# Compiled C++ files
+*.out
+
+# Application specific files
+venv
 node_modules
-bower_components
+.sass-cache
