Change tmux configs

--- a/startup/.tmux.conf
+++ b/startup/.tmux.conf
@@ -1,13 +1,41 @@
-# remap prefix from 'C-b' to 'C-a'
+# remap prefix from 'C-b' to 'C-Space'
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
+
+# Open new/split panes with the path of the current pane.
+unbind c
+bind c new-window -c '#{pane_current_path}'
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
 unbind %
+bind | split-window -h -c '#{pane_current_path}' # normally prefix-%
+bind \ split-window -h -c '#{pane_current_path}' # normally prefix-%
+unbind '"'
+bind - split-window -v -c '#{pane_current_path}' # normally prefix-"
+
+# Vim-like key bindings for pane navigation (default uses cursor keys).
+unbind h
+bind h select-pane -L
+unbind j
+bind j select-pane -D
+unbind k
+bind k select-pane -U
+unbind l # normally used for last-window
+bind l select-pane -R
+
+# Fast toggle to last window (normally prefix-l).
+bind ^space last-window
+
+# Resizing (mouse also works).
+unbind Left
+bind -r Left resize-pane -L 5
+unbind Right
+bind -r Right resize-pane -R 5
+unbind Down
+bind -r Down resize-pane -D 5
+unbind Up
+bind -r Up resize-pane -U 5
 
 # reload config file
 bind r source-file ~/.tmux.conf
