--- a/startup/.tmux.conf
+++ b/startup/.tmux.conf
@@ -52,3 +52,42 @@ set-window-option -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
+
+############
+## DESIGN ##
+############
+set -g default-terminal "screen-256color"
+
+# Status Bar
+set -g status-bg colour234
+set -g status-fg colour12
+set -g status-left-length 40
+set -g status-justify left
+set -g status-left '#S ⧉ '
+set -g status-right "#[fg=colour11,bold]$USER@#h #[fg=colour233,bg=colour245,bold] %l:%M %p "
+set -g status-interval 60
+
+# panes
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+
+# Window mode (when text is selected)
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# window status
+setw -g window-status-format " #I:#W#F "
+setw -g window-status-current-format " #I:#W#F "
+setw -g window-status-current-bg colour51
+setw -g window-status-current-fg colour0
+setw -g window-status-current-attr bold
+setw -g window-status-bg colour238
+setw -g window-status-fg white
+setw -g window-status-attr bold
+
