--- a/startup/.tmux.conf
+++ b/startup/.tmux.conf
@@ -67,10 +67,14 @@ set -g status-left '#S ⧉ '
 set -g status-right "#[fg=colour11,bold]$USER@#h #[fg=colour233,bg=colour245,bold] %l:%M %p "
 set -g status-interval 60
 
+# active/inactive panes
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
 # panes
 set -g pane-border-bg colour235
 set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
+set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour51
 
 # messaging
