Add vi like movement to tmux -> select with v and yank w y

--- a/startup/.tmux.conf
+++ b/startup/.tmux.conf
@@ -53,6 +53,9 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+# Vi like movement in tmux
+set-window-option -g mode-keys vi
+
 ############
 ## DESIGN ##
 ############
