[tmux]: Add copy mode bindings (sends to system clipboard)

--- a/startup/.tmux.conf
+++ b/startup/.tmux.conf
@@ -56,6 +56,10 @@ set -g renumber-windows on
 # Vi like movement in tmux
 set-window-option -g mode-keys vi
 
+# Vi copy mode
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 ############
 ## DESIGN ##
 ############
@@ -97,4 +101,3 @@ setw -g window-status-current-attr bold
 setw -g window-status-bg colour238
 setw -g window-status-fg white
 setw -g window-status-attr bold
-
