--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -66,8 +66,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection
 set -g default-terminal "screen-256color"
 
 # Status Bar
-set -g status-bg colour234
-set -g status-fg colour12
+set -ga status-bg colour234
+set -ga status-fg colour12
 set -g status-left-length 40
 set -g status-justify left
 set -g status-left '#S ⧉ '
@@ -79,25 +79,25 @@ set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250,bg=black'
 
 # panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour235
-set -g pane-active-border-fg colour51
+set -ga pane-border-style bg=colour235
+set -ga pane-border-style fg=colour238
+set -ga pane-active-border-style bg=colour235
+set -ga pane-active-border-style fg=colour51
 
 # messaging
-set -g message-fg black
-set -g message-bg yellow
+set -ga message-style fg=black
+set -ga message-style bg=yellow
 
 # Window mode (when text is selected)
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -ga mode-style bg=colour6
+setw -ga mode-style fg=colour0
 
 # window status
 setw -g window-status-format " #I:#W#F "
 setw -g window-status-current-format " #I:#W#F "
-setw -g window-status-current-bg colour51
-setw -g window-status-current-fg colour0
-setw -g window-status-current-attr bold
-setw -g window-status-bg colour238
-setw -g window-status-fg white
-setw -g window-status-attr bold
+setw -ga window-status-current-style bg=colour51
+setw -ga window-status-current-style fg=colour0
+setw -ga window-status-current-style bold
+setw -ga window-status-style bg=colour238
+setw -ga window-status-style fg=white
+setw -ga window-status-style bold
