[st]: Add alpha, anysize, scrollback patches

--- a/suckless/st/PKGBUILD
+++ b/suckless/st/PKGBUILD
@@ -1,34 +1,87 @@
 # Maintainer: Jose Riha <jose1711 gmail com>
+# Maintainer: Sebastian J. Bronner <waschtl@sbronner.com>
 # Contributor: Patrick Jackson <PatrickSJackson gmail com>
 # Contributor: Christoph Vigano <mail@cvigano.de>
 
 pkgname=st
 pkgver=0.8.2
-pkgrel=2
+pkgrel=10
 pkgdesc='A simple virtual terminal emulator for X.'
 arch=('i686' 'x86_64' 'armv7h')
 license=('MIT')
-depends=('libxft' 'libxext' 'xorg-fonts-misc')
-makedepends=('ncurses')
-url="http://st.suckless.org"
-source=(http://dl.suckless.org/st/$pkgname-$pkgver.tar.gz config.h)
-sha256sums=('aeb74e10aa11ed364e1bcc635a81a523119093e63befd2f231f8b0705b15bf35' 'SKIP')
+depends=(libxft)
+url=https://st.suckless.org
+source=(https://dl.suckless.org/$pkgname/$pkgname-$pkgver.tar.gz
+        st-alpha-0.8.2.diff
+        st-anysize-0.8.1.diff
+        st-scrollback-0.8.2.diff
+        st-scrollback-mouse-0.8.2.diff
+        terminfo.patch
+        README.terminfo.rst)
+
+# generate sha256sum in vim using :read !sha256sum _file_
+
+sha256sums=(aeb74e10aa11ed364e1bcc635a81a523119093e63befd2f231f8b0705b15bf35
+            9c5b4b4f23de80de78ca5ec3739dc6ce5e7f72666186cf4a9c6b614ac90fb285  # st-alpha-0.8.2.diff
+            8118dbc50d2fe07ae10958c65366476d5992684a87a431f7ee772e27d5dee50f  # st-anysize-0.8.1.diff
+            9c5aedce2ff191437bdb78aa70894c3c91a47e1be48465286f42d046677fd166  # st-scrollback-0.8.2.diff
+            edfac67b876712dc48af150d417c3d3eba6389b52194b64a189c669bf4384653  # st-scrollback-mouse-0.8.2.diff
+            bf6c8b73a606a8e513c7919d91f93ed7aeb5f44e80269bb244cc01659145a5ea
+            0ebcbba881832adf9c98ce9fe7667c851d3cc3345077cb8ebe32702698665be2)
+_sourcedir=$pkgname-$pkgver
+_makeopts="--directory=$_sourcedir"
 
 prepare() {
-  # user is supposed to maintain config.h him/herself
-  cp $srcdir/config.h $srcdir/$pkgname-$pkgver/config.h
+  patch --directory="$_sourcedir" --strip=1 < st-alpha-0.8.2.diff
+  patch --directory="$_sourcedir" --strip=1 < st-anysize-0.8.1.diff
+  patch --directory="$_sourcedir" --strip=1 < st-scrollback-0.8.2.diff
+  patch --directory="$_sourcedir" --strip=1 < st-scrollback-mouse-0.8.2.diff
+  patch --directory="$_sourcedir" --strip=0 < terminfo.patch
+
+  # This package provides a mechanism to provide a custom config.h. Multiple
+  # configuration states are determined by the presence of two files in
+  # $BUILDDIR:
+  #
+  # config.h  config.def.h  state
+  # ========  ============  =====
+  # absent    absent        Initial state. The user receives a message on how
+  #                         to configure this package.
+  # absent    present       The user was previously made aware of the
+  #                         configuration options and has not made any
+  #                         configuration changes. The package is built using
+  #                         default values.
+  # present                 The user has supplied his or her configuration. The
+  #                         file will be copied to $srcdir and used during
+  #                         build.
+  #
+  # After this test, config.def.h is copied from $srcdir to $BUILDDIR to
+  # provide an up to date template for the user.
+  if [ -e "$BUILDDIR/config.h" ]
+  then
+    cp "$BUILDDIR/config.h" "$_sourcedir"
+  elif [ ! -e "$BUILDDIR/config.def.h" ]
+  then
+    msg='This package can be configured in config.h. Copy the config.def.h '
+    msg+='that was just placed into the package directory to config.h and '
+    msg+='modify it to change the configuration. Or just leave it alone to '
+    msg+='continue to use default values.'
+    warning "$msg"
+  fi
+  cp "$_sourcedir/config.def.h" "$BUILDDIR"
 }
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  make X11INC=/usr/include/X11 X11LIB=/usr/lib/X11
+  make $_makeopts X11INC=/usr/include/X11 X11LIB=/usr/lib/X11
 }
 
 package() {
-  cd $srcdir/$pkgname-$pkgver
-  make PREFIX=/usr DESTDIR="$pkgdir" TERMINFO="$pkgdir/usr/share/terminfo" install
-  install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
-  install -Dm644 README "$pkgdir/usr/share/doc/$pkgname/README"
-  # remove to avoid conflict with ncurses
-  rm "${pkgdir}/usr/share/terminfo/s/st" "${pkgdir}/usr/share/terminfo/s/st-256color" 
+  local installopts='--mode 0644 -D --target-directory'
+  local shrdir="$pkgdir/usr/share"
+  local licdir="$shrdir/licenses/$pkgname"
+  local docdir="$shrdir/doc/$pkgname"
+  make $_makeopts PREFIX=/usr DESTDIR="$pkgdir" install
+  install $installopts "$licdir" "$_sourcedir/LICENSE"
+  install $installopts "$docdir" "$_sourcedir/README"
+  install $installopts "$docdir" README.terminfo.rst
+  install $installopts "$shrdir/$pkgname" "$_sourcedir/st.info"
 }
