--- a/suckless/st/PKGBUILD
+++ b/suckless/st/PKGBUILD
@@ -17,8 +17,10 @@ source=(https://dl.suckless.org/$pkgname/$pkgname-$pkgver.tar.gz
         st-scrollback-0.8.2.diff
         st-scrollback-mouse-0.8.2.diff
         st-clipboard-0.8.2.diff
+        st-osc52-0.8.2.diff
         terminfo.patch
         README.terminfo.rst)
+# remove osc52 diff on upgrade as it is included upstream in latest st code
 
 # generate sha256sum in vim using :read !sha256sum _file_
 
@@ -28,6 +30,7 @@ sha256sums=(aeb74e10aa11ed364e1bcc635a81a523119093e63befd2f231f8b0705b15bf35
             9c5aedce2ff191437bdb78aa70894c3c91a47e1be48465286f42d046677fd166  # st-scrollback-0.8.2.diff
             edfac67b876712dc48af150d417c3d3eba6389b52194b64a189c669bf4384653  # st-scrollback-mouse-0.8.2.diff
             63349b7391fc46449a601dfa3c4945e7b26ea30564fbf83fc1ff8db493d5196e  # st-clipboard-0.8.2.diff
+            7475ac5fac28790f42056594b555c8d10b4b7e84e4b5479e87891875279a1067  # st-osc52-0.8.2.diff
             bf6c8b73a606a8e513c7919d91f93ed7aeb5f44e80269bb244cc01659145a5ea
             0ebcbba881832adf9c98ce9fe7667c851d3cc3345077cb8ebe32702698665be2)
 _sourcedir=$pkgname-$pkgver
@@ -39,6 +42,7 @@ prepare() {
   patch --directory="$_sourcedir" --strip=1 < st-scrollback-0.8.2.diff
   patch --directory="$_sourcedir" --strip=1 < st-scrollback-mouse-0.8.2.diff
   patch --directory="$_sourcedir" --strip=1 < st-clipboard-0.8.2.diff
+  patch --directory="$_sourcedir" --strip=1 < st-osc52-0.8.2.diff
   patch --directory="$_sourcedir" --strip=0 < terminfo.patch
 
   # This package provides a mechanism to provide a custom config.h. Multiple
