[tmux]: Make background explicit
Also make the background active and inactive colours consistent with
vim.

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -75,13 +75,13 @@ set -g status-right "#[fg=colour11,bold]$USER@#h #[fg=colour233,bg=colour245,bol
 set -g status-interval 60
 
 # active/inactive panes
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=black'
+set -g window-style 'fg=colour247,bg=colour235'
+set -g window-active-style 'fg=colour250,bg=colour234'
 
 # panes
 set -ga pane-border-style bg=colour235
 set -ga pane-border-style fg=colour238
-set -ga pane-active-border-style bg=colour235
+set -ga pane-active-border-style bg=colour234
 set -ga pane-active-border-style fg=colour51
 
 # messaging
