--- a/arch/picom.conf
+++ b/arch/picom.conf
@@ -119,7 +119,7 @@ fade-out-step = 0.1
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.2
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -204,8 +204,7 @@ vsync = true
 mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
+mark-ovredir-focused = false;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
@@ -261,8 +260,7 @@ detect-transient = true
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if
 # detect-transient is enabled, too.
 #
-# detect-client-leader = false
-detect-client-leader = true
+detect-client-leader = false
 
 # Resize damaged region by a specific number of pixels.
 # A positive value enlarges it while a negative one shrinks it.
