--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -60,6 +60,9 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
+# Makes vim fast
+set -s escape-time 0
+
 ############
 ## DESIGN ##
 ############
