[pacman]: Pin cuda==10.1
For pytorch support

--- a/arch/pacman.conf
+++ b/arch/pacman.conf
@@ -23,7 +23,8 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-#IgnorePkg   =
+# pin cuda at 10.1
+IgnorePkg=cuda
 #IgnoreGroup =
 
 #NoUpgrade   =
