[picom]: Remove dim for inactive windows

--- a/arch/picom.conf
+++ b/arch/picom.conf
@@ -119,7 +119,7 @@ fade-out-step = 0.1
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.2
+# inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
