--- a/arch/keepmenu.conf
+++ b/arch/keepmenu.conf
@@ -1,17 +1,14 @@
 [dmenu]
-dmenu_command = /usr/local/bin/dmenu -c
+dmenu_command = /usr/local/bin/dmenu -c -nb #2E3440 -nf #D8DEE9 -sb #81A1C1 -sf #ECEFF4
 # # Note that dmenu_command can contain arguments as well like `rofi -width 30`
 # # Rofi and dmenu are set to case insensitive by default `-i`
 # l = number of lines to display (default 24 max)
 # fn = Inconsolata-12
 # fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
-nb = #2E3440
-nf = #D8DEE9
-sb = #81A1C1
-sf = #ECEFF4
 # b =  (just set to empty value and menu will appear at the bottom
 # m = number of monitor to display on
 pinentry = pinentry-qt
+title_path = False
 
 # # override normal foreground and background colors (dmenu) or use the
 # # -password option (rofi) to obscure passphrase entry
