--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -66,7 +66,8 @@ set -s escape-time 0
 ############
 ## DESIGN ##
 ############
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",$TERM:RGB"
 
 # Status Bar
 set -ga status-bg colour234
