[tmux]: Enable focus events to allow nvim autoread to work

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -43,6 +43,9 @@ bind r source-file ~/.tmux.conf
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+# Set focus-events on (tmux 1.9 and above)
+set -g focus-events on
+
 # don't rename windows automatically
 set-option -g allow-rename off
 
