--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -3,16 +3,20 @@ unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
-# Open new/split panes with the path of the current pane.
+# open new pane with c
+# open new pane at current path with c
 unbind c
-bind c new-window -c '#{pane_current_path}'
+bind c new-window
+bind C new-window -c '#{pane_current_path}'
 
-# split panes using | and -
+# split panes using \ and -
+# split panes at current path using | and _
 unbind %
-bind | split-window -h -c '#{pane_current_path}' # normally prefix-%
-bind \ split-window -h -c '#{pane_current_path}' # normally prefix-%
+bind '\' split-window -h # normally prefix-%
+bind '|' split-window -h -c '#{pane_current_path}'
 unbind '"'
-bind - split-window -v -c '#{pane_current_path}' # normally prefix-"
+bind '-' split-window -v # normally prefix-"
+bind '_' split-window -v -c '#{pane_current_path}'
 
 # Vim-like key bindings for pane navigation (default uses cursor keys).
 unbind h
