[tmux]: Increase buffer scrollback history

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -60,6 +60,9 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+# increase scrollback history
+set -g history-limit 100000
+
 # Vi like movement in tmux
 set-window-option -g mode-keys vi
 
