[tmux]: Add binding to break pane into new window

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -18,6 +18,9 @@ unbind '"'
 bind '-' split-window -v # normally prefix-"
 bind '_' split-window -v -c '#{pane_current_path}'
 
+# break pane into new window with b
+bind b break-pane
+
 # Vim-like key bindings for pane navigation (default uses cursor keys).
 unbind h
 bind h select-pane -L
