[tmux]: Install tpm plugin manager

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -118,3 +118,10 @@ setw -ga window-status-current-style bold
 setw -ga window-status-style bg=colour238
 setw -ga window-status-style fg=white
 setw -ga window-status-style bold
+
+#############
+## PLUGINS ##
+#############
+set -g @plugin 'tmux-plugins/tpm'
+
+run '~/.tmux/plugins/tpm/tpm'
