[tmux]: Add window keymaps

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -31,6 +31,16 @@ bind k select-pane -U
 unbind l # normally used for last-window
 bind l select-pane -R
 
+# swap window forward/back
+bind-key -r "<" swap-window -d -t -1
+bind-key -r ">" swap-window -d -t +1
+
+# move to next/previous windows
+unbind n
+bind -r n next-window
+unbind p
+bind -r p previous-window
+
 # Fast toggle to last window (normally prefix-l).
 bind ^space last-window
 
