--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -76,6 +76,9 @@ set -g renumber-windows on
 # increase scrollback history
 set -g history-limit 100000
 
+# increase repeat time (allows for longer time for repeatable actions)
+set -g repeat-time 2000
+
 # Vi like movement in tmux
 set-window-option -g mode-keys vi
 
