[tmux]: Add indicator to show tmux in prefix mode

--- a/startup/tmux.conf
+++ b/startup/tmux.conf
@@ -101,7 +101,7 @@ set -ga status-fg colour12
 set -g status-left-length 40
 set -g status-justify left
 set -g status-left '#S ⧉ '
-set -g status-right "#[fg=colour11,bold]$USER@#h #[fg=colour233,bg=colour245,bold] %l:%M %p "
+set -g status-right "#[bg=colour234]#[fg=#{?client_prefix,red,green}] ⬤ #[fg=colour11,bold]$USER@#h #[fg=colour233,bg=colour245,bold] %l:%M %p "
 set -g status-interval 60
 
 # active/inactive panes
