--- a/arch/keepmenu.conf
+++ b/arch/keepmenu.conf
@@ -7,7 +7,7 @@ dmenu_command = /usr/local/bin/dmenu -c -nb #2E3440 -nf #D8DEE9 -sb #81A1C1 -sf 
 # fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
 # b =  (just set to empty value and menu will appear at the bottom
 # m = number of monitor to display on
-pinentry = pinentry-qt
+pinentry = pinentry
 title_path = False
 
 # # override normal foreground and background colors (dmenu) or use the
