[shell]: Add tmux-sessionizer script

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -54,6 +54,9 @@ bind -r Down resize-pane -D 5
 unbind Up
 bind -r Up resize-pane -U 5
 
+# tmux-sessionizer
+bind-key -r t run-shell "tmux neww tmux-sessionizer"
+
 # reload config file
 bind r source-file ~/.tmux.conf
 
