--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -58,7 +58,7 @@ bind -r Up resize-pane -U 5
 bind-key -r t run-shell "tmux neww tmux-sessionizer"
 
 # reload config file
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
