[chore]: Add directories to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ suckless/st/*
 !suckless/*/*.diff
 
 config/git/config-os
+
+config/.wrangler/
+config/amp/
+config/claude/
+config/gcloud/
+config/wandb/
