[ghostty + tmux]: Set ghostty title based on tmux session name

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -92,6 +92,12 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection
 # Makes vim fast
 set -s escape-time 0
 
+# Let tmux update the outer terminal’s window title
+set-option -g set-titles on
+
+# Use just the session name
+set-option -g set-titles-string "#S"
+
 ############
 ## DESIGN ##
 ############
