--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -4,3 +4,4 @@ theme = catppuccin-mocha
 background-opacity = 0.95
 background-blur-radius = 20
 keybind = shift+enter=text:\x1b\r
+shell-integration-features = no-title
