--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,6 +1,6 @@
 font-family = "MesloLGS Nerd Font Mono"
 font-size = 18
-theme = catppuccin-mocha
+theme = Catppuccin Mocha
 background-opacity = 0.95
 background-blur-radius = 20
 keybind = shift+enter=text:\x1b\r
